# Webots_YOLOv8

./: README.md
Webots_YOLOv8/: setup.cfg
Webots_YOLOv8/launch/: vision.launch.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/Webots_YOLOv8/lib/Webots_YOLOv8/: finder
install/Webots_YOLOv8/share/Webots_YOLOv8/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_package/lib/my_package/: keyboard_teleop
install/my_package/share/my_package/: package.sh
install/my_package/share/my_package/resource/: my_robot.urdf
log/: latest_build
src/Webots_YOLOv8/: setup.py
src/my_package/: package.xml  setup.py
src/my_package/launch/: robot_launch.py
src/my_package/my_package/: keyboard_teleop.py
src/my_package/worlds/: .training_simulation.wbproj  training_simulation.wbt
